--- a/index.html
+++ b/index.html
@@ -1,60 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Page</title>
+    <title>صفحة المنتج</title>
     <link rel="stylesheet" href="product.css">
 </head>
 <body>
     <div class="product-container">
         <div class="product-gallery">
-            <button class="prev-btn">&#10094;</button> <!-- Left Arrow -->
+            <button class="prev-btn">&#10095;</button> <!-- Right Arrow (RTL) -->
             <div class="main-image">
-                <img id="product-image" src="" alt="Product Image">
+                <img id="product-image" src="" alt="صورة المنتج">
             </div>
-            <button class="next-btn">&#10095;</button> <!-- Right Arrow -->
+            <button class="next-btn">&#10094;</button> <!-- Left Arrow (RTL) -->
         </div>
 
         <div class="product-details">
             <h1 id="product-name"></h1>
             <p class="price" id="product-price"></p>
-
+            <div class="description">
+                <p>مصحف التجويد الملون برواية حفص عن عاصم، طباعة فاخرة على ورق شمواه عالي الجودة، 
+                بألوان مميزة تسهل عملية التلاوة والتدبر. يحتوي على علامات الوقف والابتداء بدقة، 
+                مع غلاف فني متين يحفظ المصحف لأطول فترة. المقاس 20×28 سم مناسب للحفظ والاستخدام اليومي.</p>
+            </div>
             <form id="order-form" action="https://formsubmit.co/nisach2906@gmail.com" method="POST">
                 <div id="selection-container">
                     <div class="selection-row">
-                        <label>Color:</label>
+                        <label>اللون:</label>
                         <select id="color-select" name="color"></select>
 
-                        <label>Size:</label>
+                        <label>المقاس:</label>
                         <select id="size-select" name="size"></select>
 
-                        <label>Quantity:</label>
+                        <label>الكمية:</label>
                         <input type="number" name="quantity" value="1" min="1">
                     </div>
                 </div>
 
                 <div class="add-another">
                     <span class="plus-icon">+</span>
-                    <button type="button" id="add-more">Add Another</button>
+                    <button type="button" id="add-more">إضافة أخرى</button>
                 </div>
 
                 <div class="form-row">
-                    <label>Full Name:</label>
+                    <label>الاسم الكامل:</label>
                     <input type="text" name="full_name" required>
                 </div>
 
                 <div class="form-row">
-                    <label>Telephone Number:</label>
+                    <label>رقم الهاتف:</label>
                     <input type="tel" name="phone" pattern="[0-9]{10}" maxlength="10" required>
                 </div>
 
                 <div class="form-row">
-                    <label>Address:</label>
+                    <label>العنوان:</label>
                     <textarea name="address" required></textarea>
                 </div>
 
-                <button type="submit" class="submit-btn">Submit Order</button>
+                <button type="submit" class="submit-btn">إرسال الطلب</button>
             </form>
         </div>
     </div>
