--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                 <div class="add-another">
                     <span class="plus-icon">+</span>
-                    <button type="button" id="add-more">إضافة أخرى</button>
+                    <button type="button" id="add-more">إضافة منتج آخر</button>
                 </div>
 
                 <div class="form-row">
