--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <p>مصحف التجويد الملون برواية حفص عن عاصم، طباعة فاخرة على ورق شمواه عالي الجودة، 
                 بألوان مميزة تسهل عملية التلاوة والتدبر. يحتوي على علامات الوقف والابتداء بدقة، 
                 مع غلاف فني متين يحفظ المصحف لأطول فترة. المقاس 20×28 سم مناسب للحفظ والاستخدام اليومي.</p>
+                <p>للطلب يرجى ملئ الاستمارة أدناه ⬇️</p>
             </div>
             <form id="order-form" action="https://formsubmit.co/nisach2906@gmail.com" method="POST">
                 <div id="selection-container">
