--- a/index.html
+++ b/index.html
@@ -20,11 +20,29 @@
             <h1 id="product-name"></h1>
             <p class="price" id="product-price"></p>
             <div class="description">
-                <p>مصحف التجويد الملون برواية حفص عن عاصم، طباعة فاخرة على ورق شمواه عالي الجودة، 
-                بألوان مميزة تسهل عملية التلاوة والتدبر. يحتوي على علامات الوقف والابتداء بدقة، 
-                مع غلاف فني متين يحفظ المصحف لأطول فترة. المقاس 20×28 سم مناسب للحفظ والاستخدام اليومي.</p>
-                <p>للطلب يرجى ملئ الاستمارة أدناه ⬇️</p>
+                <p><strong>مصحف التجويد الملون – رواية حفص عن عاصم</strong><br>
+                <strong>طباعة فاخرة – تصميم أنيق – تجربة روحانية متكاملة</strong></p>
+
+                <p>ارتقِ بتلاوتك مع مصحف التجويد الملون، بطباعة فاخرة على ورق شامواه عالي الجودة، 
+                يمنحك تجربة بصرية مريحة وألواناً مميزة تُسهّل تدبر الآيات وفهم أحكام التجويد.</p>
+
+                <p><strong>المواصفات:</strong></p>
+                <ul>
+                    <li><strong>الرواية:</strong> حفص عن عاصم</li>
+                    <li><strong>الطباعة:</strong> فاخرة على ورق شمواه ناعم</li>
+                    <li><strong>القياس:</strong> كبير (20 × 28 سم) مثالي للحفظ والتلاوة اليومية</li>
+                    <li><strong>التصميم:</strong> غلاف فني فاخر ومتين يحفظ المصحف لأطول مدة</li>
+                    <li><strong>العلامات:</strong> يتضمن علامات الوقف والابتداء بدقة عالية</li>
+                    <li><strong>التقنية:</strong> مزوّد بكود QR يتيح لك الاستماع للقرآن الكريم بصوت نخبة من القرّاء، بالإضافة إلى الوصول إلى تفسيرات مبسطة عبر موقع خاص</li>
+                    <li><strong>ألوان متعددة:</strong> متوفر بألوان أنيقة (أزرق، أحمر، وردي، بني)</li>
+                </ul>
+
+                <p><strong>لماذا تختاره؟</strong><br>
+                لأنه أكثر من مجرد مصحف – إنه رفيقك في رحلة التدبر، وأفضل هدية تهديها لمن تحب.</p>
+
+                <p><strong>لطلب المصحف، يرجى ملء الاستمارة أدناه ⬇️</strong></p>
             </div>
+
             <form id="order-form" action="https://formsubmit.co/nisach2906@gmail.com" method="POST">
                 <div id="selection-container">
                     <div class="selection-row">
