--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
             <h1 id="product-name"></h1>
             <p class="price" id="product-price"></p>
             <div class="description">
-                <p><strong>مصحف التجويد الملون – رواية حفص عن عاصم</strong><br>
-                <strong>طباعة فاخرة – تصميم أنيق – تجربة روحانية متكاملة</strong></p>
+                <p><b>مصحف التجويد الملون – رواية حفص عن عاصم</b><br>
+                <b>طباعة فاخرة – تصميم أنيق – تجربة روحانية متكاملة</b></p>
 
                 <p>ارتقِ بتلاوتك مع مصحف التجويد الملون، بطباعة فاخرة على ورق شامواه عالي الجودة، 
                 يمنحك تجربة بصرية مريحة وألواناً مميزة تُسهّل تدبر الآيات وفهم أحكام التجويد.</p>
 
-                <p><strong>المواصفات:</strong></p>
+                <p><b>المواصفات:</b></p>
                 <ul>
-                    <li><strong>الرواية:</strong> حفص عن عاصم</li>
-                    <li><strong>الطباعة:</strong> فاخرة على ورق شمواه ناعم</li>
-                    <li><strong>القياس:</strong> كبير (20 × 28 سم) مثالي للحفظ والتلاوة اليومية</li>
-                    <li><strong>التصميم:</strong> غلاف فني فاخر ومتين يحفظ المصحف لأطول مدة</li>
-                    <li><strong>العلامات:</strong> يتضمن علامات الوقف والابتداء بدقة عالية</li>
-                    <li><strong>التقنية:</strong> مزوّد بكود QR يتيح لك الاستماع للقرآن الكريم بصوت نخبة من القرّاء، بالإضافة إلى الوصول إلى تفسيرات مبسطة عبر موقع خاص</li>
-                    <li><strong>ألوان متعددة:</strong> متوفر بألوان أنيقة (أزرق، أحمر، وردي، بني)</li>
+                    <li><b>الرواية:</b> حفص عن عاصم</li>
+                    <li><b>الطباعة:</b> فاخرة على ورق شمواه ناعم</li>
+                    <li><b>القياس:</b> كبير (20 × 28 سم) مثالي للحفظ والتلاوة اليومية</li>
+                    <li><b>التصميم:</b> غلاف فني فاخر ومتين يحفظ المصحف لأطول مدة</li>
+                    <li><b>العلامات:</b> يتضمن علامات الوقف والابتداء بدقة عالية</li>
+                    <li><b>التقنية:</b> مزوّد بكود QR يتيح لك الاستماع للقرآن الكريم بصوت نخبة من القرّاء، بالإضافة إلى الوصول إلى تفسيرات مبسطة عبر موقع خاص</li>
+                    <li><b>ألوان متعددة:</b> متوفر بألوان أنيقة (أزرق، أحمر، وردي، بني)</li>
                 </ul>
 
-                <p><strong>لماذا تختاره؟</strong><br>
+                <p><b>لماذا تختاره؟</b><br>
                 لأنه أكثر من مجرد مصحف – إنه رفيقك في رحلة التدبر، وأفضل هدية تهديها لمن تحب.</p>
 
-                <p><strong>لطلب المصحف، يرجى ملء الاستمارة أدناه ⬇️</strong></p>
+                <p><b>لطلب المصحف، يرجى ملء الاستمارة أدناه ⬇️</b></p>
             </div>
 
             <form id="order-form" action="https://formsubmit.co/nisach2906@gmail.com" method="POST">
