--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="product.css">
 </head>
 <body>
+    <div class="mobile-header">
+        <div class="logo-container">
+            <img src="your-logo.png" alt="Logo" class="mobile-logo">
+        </div>
+        <div class="contact-banner">
+            يمكنكم الإتصال بنا بالضغط هنا 👈 0555757926
+        </div>
+    </div>
     <div class="product-container">
         <div class="product-gallery">
             <button class="prev-btn">&#10095;</button> <!-- Right Arrow (RTL) -->
