--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="mobile-header">
         <div class="logo-container">
-            <img src="your-logo.png" alt="Logo" class="mobile-logo">
+            <img src="logo.png" alt="Logo" class="mobile-logo">
         </div>
         <div class="contact-banner">
             يمكنكم الإتصال بنا بالضغط هنا 👈 0555757926
