--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="1000000824-removebg-preview (1).png" alt="Logo" class="mobile-logo">
         </div>
         <div class="contact-banner">
-            يمكنكم الإتصال بنا بالضغط هنا 👈 0555757926
+            يمكنكم الاتصال بنا عبر 0555757926
         </div>
     </div>
     <div class="product-container">
@@ -28,7 +28,7 @@
             <h1 id="product-name"></h1>
             <p class="price" id="product-price"></p>
             <div class="description">
-                <p><b>مصحف التجويد الملون – رواية حفص عن عاصم</b><br>
+                <p><b></b>مصحف التجويد الملون – رواية ورش </b><br>
                 <b>طباعة فاخرة – تصميم أنيق – تجربة روحانية متكاملة</b></p>
 
                 <p>ارتقِ بتلاوتك مع مصحف التجويد الملون، بطباعة فاخرة على ورق شامواه عالي الجودة، 
