--- a/index.html
+++ b/index.html
@@ -36,18 +36,17 @@
 
                 <p><b>المواصفات:</b></p>
                 <ul>
-                    <li><b>الرواية:</b> حفص عن عاصم</li>
+                    <li><b>الرواية:</b> زرش عن نافع</li>
                     <li><b>الطباعة:</b> فاخرة على ورق شمواه ناعم</li>
                     <li><b>القياس:</b> كبير (20 × 28 سم) مثالي للحفظ والتلاوة اليومية</li>
                     <li><b>التصميم:</b> غلاف فني فاخر ومتين يحفظ المصحف لأطول مدة</li>
-                    <li><b>العلامات:</b> يتضمن علامات الوقف والابتداء بدقة عالية</li>
                     <li><b>التقنية:</b> مزوّد بكود QR يتيح لك الاستماع للقرآن الكريم بصوت نخبة من القرّاء، بالإضافة إلى الوصول إلى تفسيرات مبسطة عبر موقع خاص</li>
-                    <li><b>ألوان متعددة:</b> متوفر بألوان أنيقة (أزرق، أحمر، وردي، بني)</li>
+                    <li><b>ألوان متعددة:</b> متوفر بألوان أنيقة (أزرق، سماوي، وردي، بني)</li>
                 </ul>
 
                 <p><b>لماذا تختاره؟</b><br>
                 لأنه أكثر من مجرد مصحف – إنه رفيقك في رحلة التدبر، وأفضل هدية تهديها لمن تحب.</p>
-
+                <br>
                 <p><b>لطلب المصحف، يرجى ملء الاستمارة أدناه ⬇️</b></p>
             </div>
 
