--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <textarea name="address" required></textarea>
                 </div>
 
-                <button type="submit" class="submit-btn">إرسال الطلب</button>
+                <button type="submit" class="submit-btn">اضغط هنا لتأكيد الطلب</button>
             </form>
         </div>
     </div>
