--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
             <h1 id="product-name"></h1>
             <p class="price" id="product-price"></p>
             <div class="description">
-                <p><b></b>مصحف التجويد الملون – رواية ورش </b><br>
-                <b>طباعة فاخرة – تصميم أنيق – تجربة روحانية متكاملة</b></p>
+                <p><span>طباعة فاخرة – تصميم أنيق – تجربة روحانية متكاملة</span></p>
 
                 <p>ارتقِ بتلاوتك مع مصحف التجويد الملون، بطباعة فاخرة على ورق شامواه عالي الجودة، 
                 يمنحك تجربة بصرية مريحة وألواناً مميزة تُسهّل تدبر الآيات وفهم أحكام التجويد.</p>
