--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="1000000824-removebg-preview (1).png" alt="Logo" class="mobile-logo">
         </div>
         <div class="contact-banner">
-            يمكنكم الاتصال بنا عبر 0555757926
+            يمكنكم الاتصال بنا عبر الرقم 0555757926
         </div>
     </div>
     <div class="product-container">
@@ -30,12 +30,12 @@
             <div class="description">
                 <p><span>طباعة فاخرة – تصميم أنيق – تجربة روحانية متكاملة</span></p>
 
-                <p>ارتقِ بتلاوتك مع مصحف التجويد الملون، بطباعة فاخرة على ورق شامواه عالي الجودة، 
+                <p>مصحف بطباعة فاخرة على ورق شامواه عالي الجودة، 
                 يمنحك تجربة بصرية مريحة وألواناً مميزة تُسهّل تدبر الآيات وفهم أحكام التجويد.</p>
 
                 <p><b>المواصفات:</b></p>
                 <ul>
-                    <li><b>الرواية:</b> زرش عن نافع</li>
+                    <li><b>الرواية:</b> ورش عن نافع</li>
                     <li><b>الطباعة:</b> فاخرة على ورق شمواه ناعم</li>
                     <li><b>القياس:</b> كبير (20 × 28 سم) مثالي للحفظ والتلاوة اليومية</li>
                     <li><b>التصميم:</b> غلاف فني فاخر ومتين يحفظ المصحف لأطول مدة</li>
