--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <div class="product-details">
             <h1 id="product-name"></h1>
             <p class="price" id="product-price"></p>
+            <div class="separator-line fancy"><span>*</span></div>
             <div class="description">
                 <p><span>طباعة فاخرة – تصميم أنيق – تجربة روحانية متكاملة</span></p>
 
