--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
             <h1 id="product-name"></h1>
             <p class="price" id="product-price"></p>
             <div class="description">
+                <p><span>طباعة فاخرة – تصميم أنيق – تجربة روحانية متكاملة</span></p>
+
+                <p>مصحف بطباعة فاخرة على ورق شامواه عالي الجودة، 
+                يمنحك تجربة بصرية مريحة وألواناً مميزة تُسهّل تدبر الآيات وفهم أحكام التجويد.</p>
+
+                <p><b>المواصفات:</b></p>
+                <ul>
+                    <li><b>الرواية:</b> ورش عن نافع</li>
+                    <li><b>الطباعة:</b> فاخرة على ورق شمواه ناعم</li>
+                    <li><b>القياس:</b> كبير (20 × 28 سم) مثالي للحفظ والتلاوة اليومية</li>
+                    <li><b>التصميم:</b> غلاف فني فاخر ومتين يحفظ المصحف لأطول مدة</li>
+                    <li><b>التقنية:</b> مزوّد بكود QR يتيح لك الاستماع للقرآن الكريم بصوت نخبة من القرّاء، بالإضافة إلى الوصول إلى تفسيرات مبسطة عبر موقع خاص</li>
+                    <li><b>ألوان متعددة:</b> متوفر بألوان أنيقة (أزرق، سماوي، وردي، بني)</li>
+                </ul> 
+                <br>
                 <p><b>لطلب المصحف، يرجى ملء الاستمارة أدناه ⬇️</b></p>
             </div>
 
@@ -67,6 +82,22 @@
 
                 <button type="submit" class="submit-btn">اضغط هنا لتأكيد الطلب</button>
             </form>
+            
+            <div class="mobile-description">
+    <p><span>طباعة فاخرة – تصميم أنيق – تجربة روحانية متكاملة</span></p>
+    <p>مصحف بطباعة فاخرة على ورق شامواه عالي الجودة، 
+    يمنحك تجربة بصرية مريحة وألواناً مميزة تُسهّل تدبر الآيات وفهم أحكام التجويد.</p>
+
+    <p><b>المواصفات:</b></p>
+    <ul>
+        <li><b>الرواية:</b> ورش عن نافع</li>
+        <li><b>الطباعة:</b> فاخرة على ورق شمواه ناعم</li>
+        <li><b>القياس:</b> كبير (20 × 28 سم) مثالي للحفظ والتلاوة اليومية</li>
+        <li><b>التصميم:</b> غلاف فني فاخر ومتين يحفظ المصحف لأطول مدة</li>
+        <li><b>التقنية:</b> مزوّد بكود QR للاستماع والتفسير المبسط</li>
+        <li><b>ألوان متعددة:</b> أزرق، سماوي، وردي، بني</li>
+    </ul>
+            </div>
         </div>
     </div>
 
