--- a/index.html
+++ b/index.html
@@ -82,25 +82,24 @@ p<!DOCTYPE html>
 
                 <button type="submit" class="submit-btn">اضغط هنا لتأكيد الطلب</button>
             </form>
-            
             <div class="mobile-description">
-    <p><span>طباعة فاخرة – تصميم أنيق – تجربة روحانية متكاملة</span></p>
-    <p>مصحف بطباعة فاخرة على ورق شامواه عالي الجودة، 
-    يمنحك تجربة بصرية مريحة وألواناً مميزة تُسهّل تدبر الآيات وفهم أحكام التجويد.</p>
+                <p><span>طباعة فاخرة – تصميم أنيق – تجربة روحانية متكاملة</span></p>
 
-    <p><b>المواصفات:</b></p>
-    <ul>
-        <li><b>الرواية:</b> ورش عن نافع</li>
-        <li><b>الطباعة:</b> فاخرة على ورق شمواه ناعم</li>
-        <li><b>القياس:</b> كبير (20 × 28 سم) مثالي للحفظ والتلاوة اليومية</li>
-        <li><b>التصميم:</b> غلاف فني فاخر ومتين يحفظ المصحف لأطول مدة</li>
-        <li><b>التقنية:</b> مزوّد بكود QR للاستماع والتفسير المبسط</li>
-        <li><b>ألوان متعددة:</b> أزرق، سماوي، وردي، بني</li>
-    </ul>
+                <p>مصحف بطباعة فاخرة على ورق شامواه عالي الجودة، 
+                يمنحك تجربة بصرية مريحة وألواناً مميزة تُسهّل تدبر الآيات وفهم أحكام التجويد.</p>
+
+                <p><b>المواصفات:</b></p>
+                <ul>
+                    <li><b>الرواية:</b> ورش عن نافع</li>
+                    <li><b>الطباعة:</b> فاخرة على ورق شمواه ناعم</li>
+                    <li><b>القياس:</b> كبير (20 × 28 سم) مثالي للحفظ والتلاوة اليومية</li>
+                    <li><b>التصميم:</b> غلاف فني فاخر ومتين يحفظ المصحف لأطول مدة</li>
+                    <li><b>التقنية:</b> مزوّد بكود QR يتيح لك الاستماع للقرآن الكريم بصوت نخبة من القرّاء، بالإضافة إلى الوصول إلى تفسيرات مبسطة عبر موقع خاص</li>
+                    <li><b>ألوان متعددة:</b> متوفر بألوان أنيقة (أزرق، سماوي، وردي، بني)</li>
+                </ul> 
+                <br>
+                <p><b>لطلب المصحف، يرجى ملء الاستمارة أدناه ⬇️</b></p>
             </div>
-        </div>
-    </div>
-
     <script src="product-script.js"></script>
 </body>
 </html>
