--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-p<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
@@ -15,6 +15,7 @@ p<!DOCTYPE html>
             يمكنكم الاتصال بنا عبر الرقم 0555757926
         </div>
     </div>
+
     <div class="product-container">
         <div class="product-gallery">
             <button class="prev-btn">&#10095;</button> <!-- Right Arrow (RTL) -->
@@ -27,11 +28,10 @@ p<!DOCTYPE html>
         <div class="product-details">
             <h1 id="product-name"></h1>
             <p class="price" id="product-price"></p>
+            
             <div class="description">
                 <p><span>طباعة فاخرة – تصميم أنيق – تجربة روحانية متكاملة</span></p>
-
-                <p>مصحف بطباعة فاخرة على ورق شامواه عالي الجودة، 
-                يمنحك تجربة بصرية مريحة وألواناً مميزة تُسهّل تدبر الآيات وفهم أحكام التجويد.</p>
+                <p>مصحف بطباعة فاخرة على ورق شامواه عالي الجودة، يمنحك تجربة بصرية مريحة وألواناً مميزة تُسهّل تدبر الآيات وفهم أحكام التجويد.</p>
 
                 <p><b>المواصفات:</b></p>
                 <ul>
@@ -41,14 +41,14 @@ p<!DOCTYPE html>
                     <li><b>التصميم:</b> غلاف فني فاخر ومتين يحفظ المصحف لأطول مدة</li>
                     <li><b>التقنية:</b> مزوّد بكود QR يتيح لك الاستماع للقرآن الكريم بصوت نخبة من القرّاء، بالإضافة إلى الوصول إلى تفسيرات مبسطة عبر موقع خاص</li>
                     <li><b>ألوان متعددة:</b> متوفر بألوان أنيقة (أزرق، سماوي، وردي، بني)</li>
-                </ul> 
+                </ul>
                 <br>
                 <p><b>لطلب المصحف، يرجى ملء الاستمارة أدناه ⬇️</b></p>
             </div>
 
-            <div class=mobile-description>
+            <div class="mobile-description">
                 <p><b>لطلب المصحف، يرجى ملء الاستمارة أدناه ⬇️</b></p>
-        </div>     
+            </div>
 
             <form id="order-form" action="https://formsubmit.co/nisach2906@gmail.com" method="POST">
                 <div id="selection-container">
@@ -86,11 +86,10 @@ p<!DOCTYPE html>
 
                 <button type="submit" class="submit-btn">اضغط هنا لتأكيد الطلب</button>
             </form>
+
             <div class="mobile-description">
                 <p><span>طباعة فاخرة – تصميم أنيق – تجربة روحانية متكاملة</span></p>
-
-                <p>مصحف بطباعة فاخرة على ورق شامواه عالي الجودة، 
-                يمنحك تجربة بصرية مريحة وألواناً مميزة تُسهّل تدبر الآيات وفهم أحكام التجويد.</p>
+                <p>مصحف بطباعة فاخرة على ورق شامواه عالي الجودة، يمنحك تجربة بصرية مريحة وألواناً مميزة تُسهّل تدبر الآيات وفهم أحكام التجويد.</p>
 
                 <p><b>المواصفات:</b></p>
                 <ul>
@@ -98,121 +97,11 @@ p<!DOCTYPE html>
                     <li><b>الطباعة:</b> فاخرة على ورق شمواه ناعم</li>
                     <li><b>القياس:</b> كبير (20 × 28 سم) مثالي للحفظ والتلاوة اليومية</li>
                     <li><b>التصميم:</b> غلاف فني فاخر ومتين يحفظ المصحف لأطول مدة</li>
-                    <lp<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مصحف الفاخر</title>
-    <link rel="stylesheet" href="product.css">
-</head>
-<body>
-    <div class="mobile-header">
-        <div class="logo-container">
-            <img src="1000000824-removebg-preview (1).png" alt="Logo" class="mobile-logo">
-        </div>
-        <div class="contact-banner">
-            يمكنكم الاتصال بنا عبر الرقم 0555757926
+                    <li><b>التقنية:</b> مزوّد بكود QR يتيح لك الاستماع للقرآن الكريم بصوت نخبة من القرّاء، بالإضافة إلى الوصول إلى تفسيرات مبسطة عبر موقع خاص</li>
+                    <li><b>ألوان متعددة:</b> متوفر بألوان أنيقة (أزرق، سماوي، وردي، بني)</li>
+                </ul>
+            </div>
         </div>
     </div>
-    <div class="product-container">
-        <div class="product-gallery">
-            <button class="prev-btn">&#10095;</button> <!-- Right Arrow (RTL) -->
-            <div class="main-image">
-                <img id="product-image" src="" alt="صورة المنتج">
-            </div>
-            <button class="next-btn">&#10094;</button> <!-- Left Arrow (RTL) -->
-        </div>
-
-        <div class="product-details">
-            <h1 id="product-name"></h1>
-            <p class="price" id="product-price"></p>
-            <div class="description">
-                <p><span>طباعة فاخرة – تصميم أنيق – تجربة روحانية متكاملة</span></p>
-
-                <p>مصحف بطباعة فاخرة على ورق شامواه عالي الجودة، 
-                يمنحك تجربة بصرية مريحة وألواناً مميزة تُسهّل تدبر الآيات وفهم أحكام التجويد.</p>
-
-                <p><b>المواصفات:</b></p>
-                <ul>
-                    <li><b>الرواية:</b> ورش عن نافع</li>
-                    <li><b>الطباعة:</b> فاخرة على ورق شمواه ناعم</li>
-                    <li><b>القياس:</b> كبير (20 × 28 سم) مثالي للحفظ والتلاوة اليومية</li>
-                    <li><b>التصميم:</b> غلاف فني فاخر ومتين يحفظ المصحف لأطول مدة</li>
-                    <li><b>التقنية:</b> مزوّد بكود QR يتيح لك الاستماع للقرآن الكريم بصوت نخبة من القرّاء، بالإضافة إلى الوصول إلى تفسيرات مبسطة عبر موقع خاص</li>
-                    <li><b>ألوان متعددة:</b> متوفر بألوان أنيقة (أزرق، سماوي، وردي، بني)</li>
-                </ul> 
-                <br>
-                <p><b>لطلب المصحف، يرجى ملء الاستمارة أدناه ⬇️</b></p>
-            </div>
-
-            <div class=mobile-description>
-                <p><b>لطلب المصحف، يرجى ملء الاستمارة أدناه ⬇️</b></p>
-        </div>     
-
-            <form id="order-form" action="https://formsubmit.co/nisach2906@gmail.com" method="POST">
-                <div id="selection-container">
-                    <div class="selection-row">
-                        <label>اللون:</label>
-                        <select id="color-select" name="color"></select>
-
-                        <label>المقاس:</label>
-                        <select id="size-select" name="size"></select>
-
-                        <label>الكمية:</label>
-                        <input type="number" name="quantity" value="1" min="1">
-                    </div>
-                </div>
-
-                <div class="add-another">
-                    <span class="plus-icon">+</span>
-                    <button type="button" id="add-more">إضافة منتج آخر</button>
-                </div>
-
-                <div class="form-row">
-                    <label>الاسم الكامل:</label>
-                    <input type="text" name="full_name" required>
-                </div>
-
-                <div class="form-row">
-                    <label>رقم الهاتف:</label>
-                    <input type="tel" name="phone" pattern="[0-9]{10}" maxlength="10" required>
-                </div>
-
-                <div class="form-row">
-                    <label>العنوان:</label>
-                    <textarea name="address" required></textarea>
-                </div>
-
-                <button type="submit" class="submit-btn">اضغط هنا لتأكيد الطلب</button>
-            </form>
-            <div class="mobile-description">
-                <p><span>طباعة فاخرة – تصميم أنيق – تجربة روحانية متكاملة</span></p>
-
-                <p>مصحف بطباعة فاخرة على ورق شامواه عالي الجودة، 
-                يمنحك تجربة بصرية مريحة وألواناً مميزة تُسهّل تدبر الآيات وفهم أحكام التجويد.</p>
-
-                <p><b>المواصفات:</b></p>
-                <ul>
-                    <li><b>الرواية:</b> ورش عن نافع</li>
-                    <li><b>الطباعة:</b> فاخرة على ورق شمواه ناعم</li>
-                    <li><b>القياس:</b> كبير (20 × 28 سم) مثالي للحفظ والتلاوة اليومية</li>
-                    <li><b>التصميم:</b> غلاف فني فاخر ومتين يحفظ المصحف لأطول مدة</li>
-                    <li><b>التقنية:</b> مزوّد بكود QR يتيح لك الاستماع للقرآن الكريم بصوت نخبة من القرّاء، بالإضافة إلى الوصول إلى تفسيرات مبسطة عبر موقع خاص</li>
-                    <li><b>ألوان متعددة:</b> متوفر بألوان أنيقة (أزرق، سماوي، وردي، بني)</li>
-                </ul> 
-                <br>
-                <p><b>لطلب المصحف، يرجى ملء الاستمارة أدناه ⬇️</b></p>
-            </div>
-    <script src="product-script.js"></script>
-</body>
-</html>
-i><b>التقنية:</b> مزوّد بكود QR يتيح لك الاستماع للقرآن الكريم بصوت نخبة من القرّاء، بالإضافة إلى الوصول إلى تفسيرات مبسطة عبر موقع خاص</li>
-                    <li><b>ألوان متعددة:</b> متوفر بألوان أنيقة (أزرق، سماوي، وردي، بني)</li>
-                </ul> 
-                <br>
-                <p><b>لطلب المصحف، يرجى ملء الاستمارة أدناه ⬇️</b></p>
-            </div>
-    <script src="product-script.js"></script>
 </body>
 </html>
