--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
         <div class="product-details">
             <h1 id="product-name"></h1>
             <p class="price" id="product-price"></p>
-            
             <div class="description">
                 <p><span>طباعة فاخرة – تصميم أنيق – تجربة روحانية متكاملة</span></p>
-                <p>مصحف بطباعة فاخرة على ورق شامواه عالي الجودة، يمنحك تجربة بصرية مريحة وألواناً مميزة تُسهّل تدبر الآيات وفهم أحكام التجويد.</p>
+
+                <p>مصحف بطباعة فاخرة على ورق شامواه عالي الجودة، 
+                    يمنحك تجربة بصرية مريحة وألواناً مميزة تُسهّل تدبر الآيات وفهم أحكام التجويد.
+                </p>
 
                 <p><b>المواصفات:</b></p>
                 <ul>
@@ -89,7 +91,10 @@
 
             <div class="mobile-description">
                 <p><span>طباعة فاخرة – تصميم أنيق – تجربة روحانية متكاملة</span></p>
-                <p>مصحف بطباعة فاخرة على ورق شامواه عالي الجودة، يمنحك تجربة بصرية مريحة وألواناً مميزة تُسهّل تدبر الآيات وفهم أحكام التجويد.</p>
+
+                <p>مصحف بطباعة فاخرة على ورق شامواه عالي الجودة، 
+                    يمنحك تجربة بصرية مريحة وألواناً مميزة تُسهّل تدبر الآيات وفهم أحكام التجويد.
+                </p>
 
                 <p><b>المواصفات:</b></p>
                 <ul>
