--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
 
             <div class="mobile-description">
-                <span>لطلب المصحف، يرجى ملء الاستمارة أدناه ⬇️</span>
+                <span>لطلب المصحف يرجى ملء الاستمارة أدناه⬇️</span>
             </div>
 
             <form id="order-form" action="https://formsubmit.co/nisach2906@gmail.com" method="POST">
