--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             </form>
 
             <div class="mobile-description">
+                <h2 id="product-des"></h2>
                 <p><span>طباعة فاخرة – تصميم أنيق – تجربة روحانية متكاملة</span></p>
 
                 <p>مصحف بطباعة فاخرة على ورق شامواه عالي الجودة، 
