--- a/index.html
+++ b/index.html
@@ -109,6 +109,39 @@
             </div>
         </div>
     </div>
+    <div class="zigzag-container">
+
+    <!-- Block 1 -->
+    <div class="zigzag-row left-image">
+        <div class="zigzag-img">
+            <img src="image1.jpg" alt="Image 1">
+        </div>
+        <div class="zigzag-text">
+            <p>وصف الصورة الأولى</p>
+        </div>
+    </div>
+
+    <!-- Block 2 -->
+    <div class="zigzag-row right-image">
+        <div class="zigzag-img">
+            <img src="image2.jpg" alt="Image 2">
+        </div>
+        <div class="zigzag-text">
+            <p>وصف الصورة الثانية</p>
+        </div>
+    </div>
+
+    <!-- Block 3 -->
+    <div class="zigzag-row left-image">
+        <div class="zigzag-img">
+            <img src="image3.jpg" alt="Image 3">
+        </div>
+        <div class="zigzag-text">
+            <p>وصف الصورة الثالثة</p>
+        </div>
+    </div>
+
+    </div>
 </body>
     <script src="product-script.js"></script>
 </html>
