--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <!-- Block 1 -->
     <div class="zigzag-row left-image">
         <div class="zigzag-img">
-            <img src="image1.jpg" alt="Image 1">
+            <img src="1.jpg" alt="Image 1">
         </div>
         <div class="zigzag-text">
             <p>وصف الصورة الأولى</p>
@@ -124,7 +124,7 @@
     <!-- Block 2 -->
     <div class="zigzag-row right-image">
         <div class="zigzag-img">
-            <img src="image2.jpg" alt="Image 2">
+            <img src="2.jpg" alt="Image 2">
         </div>
         <div class="zigzag-text">
             <p>وصف الصورة الثانية</p>
@@ -134,7 +134,7 @@
     <!-- Block 3 -->
     <div class="zigzag-row left-image">
         <div class="zigzag-img">
-            <img src="image3.jpg" alt="Image 3">
+            <img src="3.jpg" alt="Image 3">
         </div>
         <div class="zigzag-text">
             <p>وصف الصورة الثالثة</p>
