--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
                     <input type="tel" name="phone" pattern="[0-9]{10}" maxlength="10" required>
                 </div>
 
+                <div class="form-row" id="wilaya-row">
+                    <label for="wilaya-select">الولاية:</label>
+                    <select name="wilaya" id="wilaya-select" required></select>
+                </div>
+
                 <div class="form-row">
                     <label>العنوان:</label>
                     <textarea name="address" required></textarea>
