--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
 
                 <div class="form-row" id="wilaya-row">
-                    <label for="wilaya-select">الولاية:</label>
+                    <label for="wilaya-select">إختر الولاية:</label>
                     <select name="wilaya" id="wilaya-select" required></select>
                 </div>
 
