--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="1000000824-removebg-preview (1).png" alt="Logo" class="mobile-logo">
         </div>
         <div class="contact-banner">
-            يمكنكم الاتصال بنا عبر الرقم 0540931325
+            يمكنكم الاتصال بنا عبر الرقم 0555757926
         </div>
     </div>
 
@@ -81,11 +81,6 @@
                     <input type="tel" name="phone" pattern="[0-9]{10}" maxlength="10" required>
                 </div>
 
-                <div class="form-row" id="wilaya-row">
-                    <label for="wilaya-select">إختر الولاية:</label>
-                    <select name="wilaya" id="wilaya-select" required></select>
-                </div>
-
                 <div class="form-row">
                     <label>العنوان:</label>
                     <textarea name="address" required></textarea>
@@ -97,22 +92,82 @@
             <div class="mobile-description">
                 <h2>التفاصيل :</h2>
                 <p><span>طباعة فاخرة – تصميم أنيق – تجربة روحانية متكاملة</span></p>
+                <div class="description-image">
+                    <img src="1.jpg" alt="طباعة فاخرة">
+                </div>
 
                 <p>مصحف بطباعة فاخرة على ورق شامواه عالي الجودة، 
                     يمنحك تجربة بصرية مريحة وألواناً مميزة تُسهّل تدبر الآيات وفهم أحكام التجويد.
                 </p>
+                <div class="description-image">
+                    <img src="2.jpg" alt="مصحف شامواه">
+                </div>
 
                 <p><b>المواصفات:</b></p>
+                <div class="description-image">
+                    <img src="3.jpg" alt="مواصفات المصحف">
+                </div>
                 <ul>
                     <li><b>الرواية:</b> ورش عن نافع</li>
+                    <div class="description-image">
+                        <img src="4.jpg" alt="رواية ورش">
+                    </div>
                     <li><b>الطباعة:</b> فاخرة على ورق شمواه ناعم</li>
+                    <div class="description-image">
+                        <img src="5.jpg" alt="ورق شمواه">
+                    </div>
                     <li><b>القياس:</b> كبير (20 × 28 سم) مثالي للحفظ والتلاوة اليومية</li>
+                    <div class="description-image">
+                        <img src="6.jpg" alt="قياس المصحف">
+                    </div>
                     <li><b>التصميم:</b> غلاف فني فاخر ومتين يحفظ المصحف لأطول مدة</li>
+                    <div class="description-image">
+                        <img src="7.jpg" alt="غلاف المصحف">
+                    </div>
                     <li><b>التقنية:</b> مزوّد بكود QR يتيح لك الاستماع للقرآن الكريم بصوت نخبة من القرّاء، بالإضافة إلى الوصول إلى تفسيرات مبسطة عبر موقع خاص</li>
+                    <div class="description-image">
+                        <img src="8.jpg" alt="كود QR">
+                    </div>
                     <li><b>ألوان متعددة:</b> متوفر بألوان أنيقة (أزرق، سماوي، وردي، بني)</li>
+                    <div class="description-image">
+                        <img src="9.jpg" alt="ألوان المصحف">
+                    </div>
                 </ul>
             </div>
         </div>
+    </div>
+    <div class="zigzag-container">
+
+    <!-- Block 1 -->
+    <div class="zigzag-row left-image">
+        <div class="zigzag-img">
+            <img src="1.jpg" alt="Image 1">
+        </div>
+        <div class="zigzag-text">
+            <p>وصف الصورة الأولى</p>
+        </div>
+    </div>
+
+    <!-- Block 2 -->
+    <div class="zigzag-row right-image">
+        <div class="zigzag-img">
+            <img src="2.jpg" alt="Image 2">
+        </div>
+        <div class="zigzag-text">
+            <p>وصف الصورة الثانية</p>
+        </div>
+    </div>
+
+    <!-- Block 3 -->
+    <div class="zigzag-row left-image">
+        <div class="zigzag-img">
+            <img src="3.jpg" alt="Image 3">
+        </div>
+        <div class="zigzag-text">
+            <p>وصف الصورة الثالثة</p>
+        </div>
+    </div>
+
     </div>
 </body>
     <script src="product-script.js"></script>
