--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <li><b>الرواية:</b> ورش عن نافع</li>
                     <li><b>الطباعة:</b> فاخرة على ورق شمواه ناعم</li>
                     <div class="description-image">
-                        <img src="5.jpg" alt="ورق شمواه">
+                        <img src="20250419_102628.jpg" alt="ورق شمواه">
                     </div>
                     <li><b>القياس:</b> كبير (20 × 28 سم) مثالي للحفظ والتلاوة اليومية</li>
                     <li><b>التصميم:</b> غلاف فني فاخر ومتين يحفظ المصحف لأطول مدة</li>
@@ -109,7 +109,7 @@
                     </div>
                     <li><b>التقنية:</b> مزوّد بكود QR يتيح لك الاستماع للقرآن الكريم بصوت نخبة من القرّاء، بالإضافة إلى الوصول إلى تفسيرات مبسطة عبر موقع خاص</li>
                     <div class="description-image">
-                        <img src="8.jpg" alt="كود QR">
+                        <img src="20250419_102713.jpg" alt="كود QR">
                     </div>
                     <li><b>ألوان متعددة:</b> متوفر بألوان أنيقة (أزرق، سماوي، وردي، بني)</li>
                 </ul>
