--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <li><b>القياس:</b> كبير (20 × 28 سم) مثالي للحفظ والتلاوة اليومية</li>
                     <li><b>التصميم:</b> غلاف فني فاخر ومتين يحفظ المصحف لأطول مدة</li>
                     <div class="description-image">
-                        <img src="4.jpg" alt="غلاف المصحف">
+                        <img src="IMG_20250415_070743.jpg" alt="غلاف المصحف">
                     </div>
                     <li><b>التقنية:</b> مزوّد بكود QR يتيح لك الاستماع للقرآن الكريم بصوت نخبة من القرّاء، بالإضافة إلى الوصول إلى تفسيرات مبسطة عبر موقع خاص</li>
                     <div class="description-image">
