--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <span>لطلب المصحف يرجى ملء الاستمارة أدناه⬇️</span>
             </div>
 
-            <form id="order-form" action="https://formsubmit.co/nisach2906@gmail.com" method="POST">
+            <form id="order-form" action="https://getform.io/f/bpjnogrb" method="POST">
                 <div id="selection-container">
                     <div class="selection-row">
                         <label>اللون:</label>
